dorcas/condition/ConditionParser.py
# Generated from Condition.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ConditionParser ( Parser ):

    grammarFileName = "Condition.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'('", "')'", "'null'", "'and'", "'or'", "'not'", "'true'", 
                     "'false'", "'like'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NULL", "AND", "OR", "NOT", "TRUE", "FALSE", 
                      "LIKE", "FLOAT", "INT", "STRING", "IDENT", "NEWLINE", 
                      "WS" ]

    RULE_cond = 0
    RULE_boolexpr = 1
    RULE_value = 2

    ruleNames =  [ "cond", "boolexpr", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    NULL=9
    AND=10
    OR=11
    NOT=12
    TRUE=13
    FALSE=14
    LIKE=15
    FLOAT=16
    INT=17
    STRING=18
    IDENT=19
    NEWLINE=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConditionParser.RULE_cond

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintExprContext(CondContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.CondContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def boolexpr(self):
            return self.getTypedRuleContext(ConditionParser.BoolexprContext,0)

        def NEWLINE(self):
            return self.getToken(ConditionParser.NEWLINE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)



    def cond(self):

        localctx = ConditionParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_cond)
        try:
            localctx = ConditionParser.PrintExprContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 6
            self.boolexpr(0)
            self.state = 7
            self.match(ConditionParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConditionParser.RULE_boolexpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LessOrEqualContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConditionParser.ValueContext)
            else:
                return self.getTypedRuleContext(ConditionParser.ValueContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessOrEqual" ):
                return visitor.visitLessOrEqual(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def boolexpr(self):
            return self.getTypedRuleContext(ConditionParser.BoolexprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def boolexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConditionParser.BoolexprContext)
            else:
                return self.getTypedRuleContext(ConditionParser.BoolexprContext,i)

        def OR(self):
            return self.getToken(ConditionParser.OR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class GreaterOrEqualContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConditionParser.ValueContext)
            else:
                return self.getTypedRuleContext(ConditionParser.ValueContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreaterOrEqual" ):
                return visitor.visitGreaterOrEqual(self)
            else:
                return visitor.visitChildren(self)


    class TrueLiteralContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(ConditionParser.TRUE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrueLiteral" ):
                return visitor.visitTrueLiteral(self)
            else:
                return visitor.visitChildren(self)


    class NotContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(ConditionParser.NOT, 0)
        def boolexpr(self):
            return self.getTypedRuleContext(ConditionParser.BoolexprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class LessThanContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConditionParser.ValueContext)
            else:
                return self.getTypedRuleContext(ConditionParser.ValueContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessThan" ):
                return visitor.visitLessThan(self)
            else:
                return visitor.visitChildren(self)


    class LikeContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConditionParser.ValueContext)
            else:
                return self.getTypedRuleContext(ConditionParser.ValueContext,i)

        def LIKE(self):
            return self.getToken(ConditionParser.LIKE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLike" ):
                return visitor.visitLike(self)
            else:
                return visitor.visitChildren(self)


    class FalseLiteralContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(ConditionParser.FALSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalseLiteral" ):
                return visitor.visitFalseLiteral(self)
            else:
                return visitor.visitChildren(self)


    class GreaterThanContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConditionParser.ValueContext)
            else:
                return self.getTypedRuleContext(ConditionParser.ValueContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreaterThan" ):
                return visitor.visitGreaterThan(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def boolexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConditionParser.BoolexprContext)
            else:
                return self.getTypedRuleContext(ConditionParser.BoolexprContext,i)

        def AND(self):
            return self.getToken(ConditionParser.AND, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class EqualityContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConditionParser.ValueContext)
            else:
                return self.getTypedRuleContext(ConditionParser.ValueContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquality" ):
                return visitor.visitEquality(self)
            else:
                return visitor.visitChildren(self)


    class InequalityContext(BoolexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.BoolexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConditionParser.ValueContext)
            else:
                return self.getTypedRuleContext(ConditionParser.ValueContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInequality" ):
                return visitor.visitInequality(self)
            else:
                return visitor.visitChildren(self)



    def boolexpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ConditionParser.BoolexprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_boolexpr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = ConditionParser.NotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 10
                self.match(ConditionParser.NOT)
                self.state = 11
                self.boolexpr(11)
                pass

            elif la_ == 2:
                localctx = ConditionParser.EqualityContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 12
                self.value()
                self.state = 13
                self.match(ConditionParser.T__0)
                self.state = 14
                self.value()
                pass

            elif la_ == 3:
                localctx = ConditionParser.InequalityContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 16
                self.value()
                self.state = 17
                self.match(ConditionParser.T__1)
                self.state = 18
                self.value()
                pass

            elif la_ == 4:
                localctx = ConditionParser.LessThanContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 20
                self.value()
                self.state = 21
                self.match(ConditionParser.T__2)
                self.state = 22
                self.value()
                pass

            elif la_ == 5:
                localctx = ConditionParser.GreaterThanContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 24
                self.value()
                self.state = 25
                self.match(ConditionParser.T__3)
                self.state = 26
                self.value()
                pass

            elif la_ == 6:
                localctx = ConditionParser.LessOrEqualContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 28
                self.value()
                self.state = 29
                self.match(ConditionParser.T__4)
                self.state = 30
                self.value()
                pass

            elif la_ == 7:
                localctx = ConditionParser.GreaterOrEqualContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 32
                self.value()
                self.state = 33
                self.match(ConditionParser.T__5)
                self.state = 34
                self.value()
                pass

            elif la_ == 8:
                localctx = ConditionParser.LikeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 36
                self.value()
                self.state = 37
                self.match(ConditionParser.LIKE)
                self.state = 38
                self.value()
                pass

            elif la_ == 9:
                localctx = ConditionParser.TrueLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 40
                self.match(ConditionParser.TRUE)
                pass

            elif la_ == 10:
                localctx = ConditionParser.FalseLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 41
                self.match(ConditionParser.FALSE)
                pass

            elif la_ == 11:
                localctx = ConditionParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 42
                self.match(ConditionParser.T__6)
                self.state = 43
                self.boolexpr(0)
                self.state = 44
                self.match(ConditionParser.T__7)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 54
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = ConditionParser.AndContext(self, ConditionParser.BoolexprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_boolexpr)
                        self.state = 48
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 49
                        self.match(ConditionParser.AND)
                        self.state = 50
                        self.boolexpr(14)
                        pass

                    elif la_ == 2:
                        localctx = ConditionParser.OrContext(self, ConditionParser.BoolexprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_boolexpr)
                        self.state = 51
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 52
                        self.match(ConditionParser.OR)
                        self.state = 53
                        self.boolexpr(13)
                        pass

             
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConditionParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FalseValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(ConditionParser.FALSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalseValue" ):
                return visitor.visitFalseValue(self)
            else:
                return visitor.visitChildren(self)


    class StringLiteralContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(ConditionParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringLiteral" ):
                return visitor.visitStringLiteral(self)
            else:
                return visitor.visitChildren(self)


    class StateVariableContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENT(self):
            return self.getToken(ConditionParser.IDENT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateVariable" ):
                return visitor.visitStateVariable(self)
            else:
                return visitor.visitChildren(self)


    class TrueValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(ConditionParser.TRUE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrueValue" ):
                return visitor.visitTrueValue(self)
            else:
                return visitor.visitChildren(self)


    class IntLiteralContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(ConditionParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntLiteral" ):
                return visitor.visitIntLiteral(self)
            else:
                return visitor.visitChildren(self)


    class FloatLiteralContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(ConditionParser.FLOAT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatLiteral" ):
                return visitor.visitFloatLiteral(self)
            else:
                return visitor.visitChildren(self)


    class NullValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConditionParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NULL(self):
            return self.getToken(ConditionParser.NULL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullValue" ):
                return visitor.visitNullValue(self)
            else:
                return visitor.visitChildren(self)



    def value(self):

        localctx = ConditionParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_value)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                localctx = ConditionParser.IntLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(ConditionParser.INT)
                pass
            elif token in [18]:
                localctx = ConditionParser.StringLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(ConditionParser.STRING)
                pass
            elif token in [16]:
                localctx = ConditionParser.FloatLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(ConditionParser.FLOAT)
                pass
            elif token in [19]:
                localctx = ConditionParser.StateVariableContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.match(ConditionParser.IDENT)
                pass
            elif token in [13]:
                localctx = ConditionParser.TrueValueContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 63
                self.match(ConditionParser.TRUE)
                pass
            elif token in [14]:
                localctx = ConditionParser.FalseValueContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 64
                self.match(ConditionParser.FALSE)
                pass
            elif token in [9]:
                localctx = ConditionParser.NullValueContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 65
                self.match(ConditionParser.NULL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.boolexpr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def boolexpr_sempred(self, localctx:BoolexprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 12)
         




